libqt6c/src/libqwidget.hpp

typedef struct QBitmap QBitmap;
typedef struct QCursor QCursor;
typedef struct QFont QFont;
typedef struct QFontInfo QFontInfo;
typedef struct QFontMetrics QFontMetrics;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPainter QPainter;
typedef struct QPalette QPalette;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyle QStyle;
typedef struct QWidget QWidget;
QWidget* QWidget_new(QWidget* parent);
QWidget* QWidget_new2();
QWidget* QWidget_new3(QWidget* parent, int f);
QMetaObject* QWidget_MetaObject(const QWidget* self);
int QWidget_DevType(const QWidget* self);
uintptr_t QWidget_WinId(const QWidget* self);
void QWidget_CreateWinId(QWidget* self);
uintptr_t QWidget_InternalWinId(const QWidget* self);
uintptr_t QWidget_EffectiveWinId(const QWidget* self);
QStyle* QWidget_Style(const QWidget* self);
void QWidget_SetStyle(QWidget* self, QStyle* style);
bool QWidget_IsTopLevel(const QWidget* self);
bool QWidget_IsWindow(const QWidget* self);
bool QWidget_IsModal(const QWidget* self);
int QWidget_WindowModality(const QWidget* self);
void QWidget_SetWindowModality(QWidget* self, int windowModality);
bool QWidget_IsEnabled(const QWidget* self);
bool QWidget_IsEnabledTo(const QWidget* self, const QWidget* param1);
void QWidget_SetEnabled(QWidget* self, bool enabled);
void QWidget_SetDisabled(QWidget* self, bool disabled);
void QWidget_SetWindowModified(QWidget* self, bool windowModified);
QRect* QWidget_FrameGeometry(const QWidget* self);
QRect* QWidget_Geometry(const QWidget* self);
QRect* QWidget_NormalGeometry(const QWidget* self);
int QWidget_X(const QWidget* self);
int QWidget_Y(const QWidget* self);
QPoint* QWidget_Pos(const QWidget* self);
QSize* QWidget_FrameSize(const QWidget* self);
QSize* QWidget_Size(const QWidget* self);
int QWidget_Width(const QWidget* self);
int QWidget_Height(const QWidget* self);
QRect* QWidget_Rect(const QWidget* self);
QRect* QWidget_ChildrenRect(const QWidget* self);
QRegion* QWidget_ChildrenRegion(const QWidget* self);
QSize* QWidget_MinimumSize(const QWidget* self);
QSize* QWidget_MaximumSize(const QWidget* self);
int QWidget_MinimumWidth(const QWidget* self);
int QWidget_MinimumHeight(const QWidget* self);
int QWidget_MaximumWidth(const QWidget* self);
int QWidget_MaximumHeight(const QWidget* self);
void QWidget_SetMinimumSize(QWidget* self, const QSize* minimumSize);
void QWidget_SetMinimumSize2(QWidget* self, int minw, int minh);
void QWidget_SetMaximumSize(QWidget* self, const QSize* maximumSize);
void QWidget_SetMaximumSize2(QWidget* self, int maxw, int maxh);
void QWidget_SetMinimumWidth(QWidget* self, int minw);
void QWidget_SetMinimumHeight(QWidget* self, int minh);
void QWidget_SetMaximumWidth(QWidget* self, int maxw);
void QWidget_SetMaximumHeight(QWidget* self, int maxh);
QSize* QWidget_SizeIncrement(const QWidget* self);
void QWidget_SetSizeIncrement(QWidget* self, const QSize* sizeIncrement);
void QWidget_SetSizeIncrement2(QWidget* self, int w, int h);
QSize* QWidget_BaseSize(const QWidget* self);
void QWidget_SetBaseSize(QWidget* self, const QSize* baseSize);
void QWidget_SetBaseSize2(QWidget* self, int basew, int baseh);
void QWidget_SetFixedSize(QWidget* self, const QSize* fixedSize);
void QWidget_SetFixedSize2(QWidget* self, int w, int h);
void QWidget_SetFixedWidth(QWidget* self, int w);
void QWidget_SetFixedHeight(QWidget* self, int h);
QPointF* QWidget_MapToGlobal(const QWidget* self, const QPointF* param1);
QPoint* QWidget_MapToGlobal2(const QWidget* self, const QPoint* param1);
QPointF* QWidget_MapFromGlobal(const QWidget* self, const QPointF* param1);
QPoint* QWidget_MapFromGlobal2(const QWidget* self, const QPoint* param1);
QPointF* QWidget_MapToParent(const QWidget* self, const QPointF* param1);
QPoint* QWidget_MapToParent2(const QWidget* self, const QPoint* param1);
QPointF* QWidget_MapFromParent(const QWidget* self, const QPointF* param1);
QPoint* QWidget_MapFromParent2(const QWidget* self, const QPoint* param1);
QPointF* QWidget_MapTo(const QWidget* self, const QWidget* param1, const QPointF* param2);
QPoint* QWidget_MapTo2(const QWidget* self, const QWidget* param1, const QPoint* param2);
QPointF* QWidget_MapFrom(const QWidget* self, const QWidget* param1, const QPointF* param2);
QPoint* QWidget_MapFrom2(const QWidget* self, const QWidget* param1, const QPoint* param2);
QWidget* QWidget_Window(const QWidget* self);
QWidget* QWidget_NativeParentWidget(const QWidget* self);
QWidget* QWidget_TopLevelWidget(const QWidget* self);
QPalette* QWidget_Palette(const QWidget* self);
void QWidget_SetPalette(QWidget* self, const QPalette* palette);
void QWidget_SetBackgroundRole(QWidget* self, int backgroundRole);
int QWidget_BackgroundRole(const QWidget* self);
void QWidget_SetForegroundRole(QWidget* self, int foregroundRole);
int QWidget_ForegroundRole(const QWidget* self);
QFont* QWidget_Font(const QWidget* self);
void QWidget_SetFont(QWidget* self, const QFont* font);
QFontMetrics* QWidget_FontMetrics(const QWidget* self);
QFontInfo* QWidget_FontInfo(const QWidget* self);
QCursor* QWidget_Cursor(const QWidget* self);
void QWidget_SetCursor(QWidget* self, const QCursor* cursor);
void QWidget_UnsetCursor(QWidget* self);
void QWidget_SetMouseTracking(QWidget* self, bool enable);
bool QWidget_HasMouseTracking(const QWidget* self);
bool QWidget_UnderMouse(const QWidget* self);
void QWidget_SetTabletTracking(QWidget* self, bool enable);
bool QWidget_HasTabletTracking(const QWidget* self);
void QWidget_SetMask(QWidget* self, const QBitmap* mask);
void QWidget_SetMask2(QWidget* self, const QRegion* mask);
QRegion* QWidget_Mask(const QWidget* self);
void QWidget_ClearMask(QWidget* self);
void QWidget_Render(QWidget* self, QPaintDevice* target);
void QWidget_Render2(QWidget* self, QPainter* painter);
QPixmap* QWidget_Grab(QWidget* self);
QGraphicsEffect* QWidget_GraphicsEffect(const QWidget* self);
void QWidget_SetGraphicsEffect(QWidget* self, QGraphicsEffect* effect);
void QWidget_Delete(QWidget* self);