QtBeef/src/Qt/qwidget.bf

extension CQt
{
	[LinkName("QWidget_new")]
	public static extern QWidget_Ptr* QWidget_new(QWidget_Ptr* parent);
	[LinkName("QWidget_new2")]
	public static extern QWidget_Ptr* QWidget_new2();
	[LinkName("QWidget_new3")]
	public static extern QWidget_Ptr* QWidget_new3(QWidget_Ptr* parent, void* f);
	[LinkName("QWidget_Delete")]
	public static extern void QWidget_Delete(QWidget_Ptr* self);
	[LinkName("QWidget_MetaObject")]
	public static extern QMetaObject_Ptr* QWidget_MetaObject(QWidget_Ptr* self);
	[LinkName("QWidget_Qt_Metacast")]
	public static extern void* QWidget_Qt_Metacast(QWidget_Ptr* self, c_char* param1);
	[LinkName("QWidget_Qt_Metacall")]
	public static extern c_int QWidget_Qt_Metacall(QWidget_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QWidget_Tr")]
	public static extern libqt_string QWidget_Tr(c_char* s);
	[LinkName("QWidget_DevType")]
	public static extern c_int QWidget_DevType(QWidget_Ptr* self);
	[LinkName("QWidget_WinId")]
	public static extern void* QWidget_WinId(QWidget_Ptr* self);
	[LinkName("QWidget_CreateWinId")]
	public static extern void QWidget_CreateWinId(QWidget_Ptr* self);
	[LinkName("QWidget_InternalWinId")]
	public static extern void* QWidget_InternalWinId(QWidget_Ptr* self);
	[LinkName("QWidget_EffectiveWinId")]
	public static extern void* QWidget_EffectiveWinId(QWidget_Ptr* self);
	[LinkName("QWidget_Style")]
	public static extern QStyle_Ptr* QWidget_Style(QWidget_Ptr* self);
	[LinkName("QWidget_SetStyle")]
	public static extern void QWidget_SetStyle(QWidget_Ptr* self, QStyle_Ptr* style);
	[LinkName("QWidget_IsTopLevel")]
	public static extern bool QWidget_IsTopLevel(QWidget_Ptr* self);
	[LinkName("QWidget_IsWindow")]
	public static extern bool QWidget_IsWindow(QWidget_Ptr* self);
	[LinkName("QWidget_IsModal")]
	public static extern bool QWidget_IsModal(QWidget_Ptr* self);
	[LinkName("QWidget_WindowModality")]
	public static extern Qt_WindowModality QWidget_WindowModality(QWidget_Ptr* self);
	[LinkName("QWidget_SetWindowModality")]
	public static extern void QWidget_SetWindowModality(QWidget_Ptr* self, Qt_WindowModality windowModality);
	[LinkName("QWidget_IsEnabled")]
	public static extern bool QWidget_IsEnabled(QWidget_Ptr* self);
	[LinkName("QWidget_IsEnabledTo")]
	public static extern bool QWidget_IsEnabledTo(QWidget_Ptr* self, QWidget_Ptr* param1);
	[LinkName("QWidget_SetEnabled")]
	public static extern void QWidget_SetEnabled(QWidget_Ptr* self, bool enabled);
	[LinkName("QWidget_SetDisabled")]
	public static extern void QWidget_SetDisabled(QWidget_Ptr* self, bool disabled);
	[LinkName("QWidget_SetWindowModified")]
	public static extern void QWidget_SetWindowModified(QWidget_Ptr* self, bool windowModified);
	[LinkName("QWidget_FrameGeometry")]
	public static extern QRect_Ptr QWidget_FrameGeometry(QWidget_Ptr* self);
	[LinkName("QWidget_Geometry")]
	public static extern QRect_Ptr* QWidget_Geometry(QWidget_Ptr* self);
	[LinkName("QWidget_NormalGeometry")]
	public static extern QRect_Ptr QWidget_NormalGeometry(QWidget_Ptr* self);
	[LinkName("QWidget_X")]
	public static extern c_int QWidget_X(QWidget_Ptr* self);
	[LinkName("QWidget_Y")]
	public static extern c_int QWidget_Y(QWidget_Ptr* self);
	[LinkName("QWidget_Pos")]
	public static extern QPoint_Ptr QWidget_Pos(QWidget_Ptr* self);
	[LinkName("QWidget_FrameSize")]
	public static extern QSize_Ptr QWidget_FrameSize(QWidget_Ptr* self);
	[LinkName("QWidget_Size")]
	public static extern QSize_Ptr QWidget_Size(QWidget_Ptr* self);
	[LinkName("QWidget_Width")]
	public static extern c_int QWidget_Width(QWidget_Ptr* self);
	[LinkName("QWidget_Height")]
	public static extern c_int QWidget_Height(QWidget_Ptr* self);
	[LinkName("QWidget_Rect")]
	public static extern QRect_Ptr QWidget_Rect(QWidget_Ptr* self);
	[LinkName("QWidget_ChildrenRect")]
	public static extern QRect_Ptr QWidget_ChildrenRect(QWidget_Ptr* self);
	[LinkName("QWidget_ChildrenRegion")]
	public static extern QRegion_Ptr QWidget_ChildrenRegion(QWidget_Ptr* self);
	[LinkName("QWidget_MinimumSize")]
	public static extern QSize_Ptr QWidget_MinimumSize(QWidget_Ptr* self);
	[LinkName("QWidget_MaximumSize")]
	public static extern QSize_Ptr QWidget_MaximumSize(QWidget_Ptr* self);
	[LinkName("QWidget_MinimumWidth")]
	public static extern c_int QWidget_MinimumWidth(QWidget_Ptr* self);
	[LinkName("QWidget_MinimumHeight")]
	public static extern c_int QWidget_MinimumHeight(QWidget_Ptr* self);
	[LinkName("QWidget_MaximumWidth")]
	public static extern c_int QWidget_MaximumWidth(QWidget_Ptr* self);
	[LinkName("QWidget_MaximumHeight")]
	public static extern c_int QWidget_MaximumHeight(QWidget_Ptr* self);
	[LinkName("QWidget_SetMinimumSize")]
	public static extern void QWidget_SetMinimumSize(QWidget_Ptr* self, QSize_Ptr* minimumSize);
	[LinkName("QWidget_SetMinimumSize2")]
	public static extern void QWidget_SetMinimumSize2(QWidget_Ptr* self, c_int minw, c_int minh);
	[LinkName("QWidget_SetMaximumSize")]
	public static extern void QWidget_SetMaximumSize(QWidget_Ptr* self, QSize_Ptr* maximumSize);
	[LinkName("QWidget_SetMaximumSize2")]
	public static extern void QWidget_SetMaximumSize2(QWidget_Ptr* self, c_int maxw, c_int maxh);
	[LinkName("QWidget_SetMinimumWidth")]
	public static extern void QWidget_SetMinimumWidth(QWidget_Ptr* self, c_int minw);
	[LinkName("QWidget_SetMinimumHeight")]
	public static extern void QWidget_SetMinimumHeight(QWidget_Ptr* self, c_int minh);
	[LinkName("QWidget_SetMaximumWidth")]
	public static extern void QWidget_SetMaximumWidth(QWidget_Ptr* self, c_int maxw);
	[LinkName("QWidget_SetMaximumHeight")]
	public static extern void QWidget_SetMaximumHeight(QWidget_Ptr* self, c_int maxh);
	[LinkName("QWidget_SizeIncrement")]
	public static extern QSize_Ptr QWidget_SizeIncrement(QWidget_Ptr* self);
	[LinkName("QWidget_SetSizeIncrement")]
	public static extern void QWidget_SetSizeIncrement(QWidget_Ptr* self, QSize_Ptr* sizeIncrement);
	[LinkName("QWidget_SetSizeIncrement2")]
	public static extern void QWidget_SetSizeIncrement2(QWidget_Ptr* self, c_int w, c_int h);
	[LinkName("QWidget_BaseSize")]
	public static extern QSize_Ptr QWidget_BaseSize(QWidget_Ptr* self);
	[LinkName("QWidget_SetBaseSize")]
	public static extern void QWidget_SetBaseSize(QWidget_Ptr* self, QSize_Ptr* baseSize);
	[LinkName("QWidget_SetBaseSize2")]
	public static extern void QWidget_SetBaseSize2(QWidget_Ptr* self, c_int basew, c_int baseh);
	[LinkName("QWidget_SetFixedSize")]
	public static extern void QWidget_SetFixedSize(QWidget_Ptr* self, QSize_Ptr* fixedSize);
	[LinkName("QWidget_SetFixedSize2")]
	public static extern void QWidget_SetFixedSize2(QWidget_Ptr* self, c_int w, c_int h);
	[LinkName("QWidget_SetFixedWidth")]
	public static extern void QWidget_SetFixedWidth(QWidget_Ptr* self, c_int w);
	[LinkName("QWidget_SetFixedHeight")]
	public static extern void QWidget_SetFixedHeight(QWidget_Ptr* self, c_int h);
	[LinkName("QWidget_MapToGlobal")]
	public static extern QPointF_Ptr QWidget_MapToGlobal(QWidget_Ptr* self, QPointF_Ptr* param1);
	[LinkName("QWidget_MapToGlobal2")]
	public static extern QPoint_Ptr QWidget_MapToGlobal2(QWidget_Ptr* self, QPoint_Ptr* param1);
	[LinkName("QWidget_MapFromGlobal")]
	public static extern QPointF_Ptr QWidget_MapFromGlobal(QWidget_Ptr* self, QPointF_Ptr* param1);
	[LinkName("QWidget_MapFromGlobal2")]
	public static extern QPoint_Ptr QWidget_MapFromGlobal2(QWidget_Ptr* self, QPoint_Ptr* param1);
	[LinkName("QWidget_MapToParent")]
	public static extern QPointF_Ptr QWidget_MapToParent(QWidget_Ptr* self, QPointF_Ptr* param1);
	[LinkName("QWidget_MapToParent2")]
	public static extern QPoint_Ptr QWidget_MapToParent2(QWidget_Ptr* self, QPoint_Ptr* param1);
	[LinkName("QWidget_MapFromParent")]
	public static extern QPointF_Ptr QWidget_MapFromParent(QWidget_Ptr* self, QPointF_Ptr* param1);
	[LinkName("QWidget_MapFromParent2")]
	public static extern QPoint_Ptr QWidget_MapFromParent2(QWidget_Ptr* self, QPoint_Ptr* param1);
	[LinkName("QWidget_MapTo")]
	public static extern QPointF_Ptr QWidget_MapTo(QWidget_Ptr* self, QWidget_Ptr* param1, QPointF_Ptr* param2);
	[LinkName("QWidget_MapTo2")]
	public static extern QPoint_Ptr QWidget_MapTo2(QWidget_Ptr* self, QWidget_Ptr* param1, QPoint_Ptr* param2);
	[LinkName("QWidget_MapFrom")]
	public static extern QPointF_Ptr QWidget_MapFrom(QWidget_Ptr* self, QWidget_Ptr* param1, QPointF_Ptr* param2);
	[LinkName("QWidget_MapFrom2")]
	public static extern QPoint_Ptr QWidget_MapFrom2(QWidget_Ptr* self, QWidget_Ptr* param1, QPoint_Ptr* param2);
	[LinkName("QWidget_Window")]
	public static extern QWidget_Ptr* QWidget_Window(QWidget_Ptr* self);
	[LinkName("QWidget_NativeParentWidget")]
	public static extern QWidget_Ptr* QWidget_NativeParentWidget(QWidget_Ptr* self);
	[LinkName("QWidget_TopLevelWidget")]
	public static extern QWidget_Ptr* QWidget_TopLevelWidget(QWidget_Ptr* self);
	[LinkName("QWidget_Palette")]
	public static extern QPalette_Ptr* QWidget_Palette(QWidget_Ptr* self);
	[LinkName("QWidget_SetPalette")]
	public static extern void QWidget_SetPalette(QWidget_Ptr* self, QPalette_Ptr* palette);
	[LinkName("QWidget_SetBackgroundRole")]
	public static extern void QWidget_SetBackgroundRole(QWidget_Ptr* self, QPalette_ColorRole backgroundRole);
	[LinkName("QWidget_BackgroundRole")]
	public static extern QPalette_ColorRole QWidget_BackgroundRole(QWidget_Ptr* self);
	[LinkName("QWidget_SetForegroundRole")]
	public static extern void QWidget_SetForegroundRole(QWidget_Ptr* self, QPalette_ColorRole foregroundRole);
	[LinkName("QWidget_ForegroundRole")]
	public static extern QPalette_ColorRole QWidget_ForegroundRole(QWidget_Ptr* self);
	[LinkName("QWidget_Font")]
	public static extern QFont_Ptr* QWidget_Font(QWidget_Ptr* self);
	[LinkName("QWidget_SetFont")]
	public static extern void QWidget_SetFont(QWidget_Ptr* self, QFont_Ptr* font);
	[LinkName("QWidget_FontMetrics")]
	public static extern QFontMetrics_Ptr QWidget_FontMetrics(QWidget_Ptr* self);
	[LinkName("QWidget_FontInfo")]
	public static extern QFontInfo_Ptr QWidget_FontInfo(QWidget_Ptr* self);
	[LinkName("QWidget_Cursor")]
	public static extern QCursor_Ptr QWidget_Cursor(QWidget_Ptr* self);
	[LinkName("QWidget_SetCursor")]
	public static extern void QWidget_SetCursor(QWidget_Ptr* self, QCursor_Ptr* cursor);
	[LinkName("QWidget_UnsetCursor")]
	public static extern void QWidget_UnsetCursor(QWidget_Ptr* self);
	[LinkName("QWidget_SetMouseTracking")]
	public static extern void QWidget_SetMouseTracking(QWidget_Ptr* self, bool enable);
	[LinkName("QWidget_HasMouseTracking")]
	public static extern bool QWidget_HasMouseTracking(QWidget_Ptr* self);
	[LinkName("QWidget_UnderMouse")]
	public static extern bool QWidget_UnderMouse(QWidget_Ptr* self);
	[LinkName("QWidget_SetTabletTracking")]
	public static extern void QWidget_SetTabletTracking(QWidget_Ptr* self, bool enable);
	[LinkName("QWidget_HasTabletTracking")]
	public static extern bool QWidget_HasTabletTracking(QWidget_Ptr* self);
	[LinkName("QWidget_SetMask")]
	public static extern void QWidget_SetMask(QWidget_Ptr* self, QBitmap_Ptr* mask);
	[LinkName("QWidget_SetMask2")]
	public static extern void QWidget_SetMask2(QWidget_Ptr* self, QRegion_Ptr* mask);
	[LinkName("QWidget_Mask")]
	public static extern QRegion_Ptr QWidget_Mask(QWidget_Ptr* self);
	[LinkName("QWidget_ClearMask")]
	public static extern void QWidget_ClearMask(QWidget_Ptr* self);
	[LinkName("QWidget_Render")]
	public static extern void QWidget_Render(QWidget_Ptr* self, QPaintDevice_Ptr* target);
	[LinkName("QWidget_Render2")]
	public static extern void QWidget_Render2(QWidget_Ptr* self, QPainter_Ptr* painter);
	[LinkName("QWidget_Grab")]
	public static extern QPixmap_Ptr QWidget_Grab(QWidget_Ptr* self);
	[LinkName("QWidget_GraphicsEffect")]
	public static extern QGraphicsEffect_Ptr* QWidget_GraphicsEffect(QWidget_Ptr* self);
	[LinkName("QWidget_SetGraphicsEffect")]
	public static extern void QWidget_SetGraphicsEffect(QWidget_Ptr* self, QGraphicsEffect_Ptr* effect);
